# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixin.py  settings.py  urls.py  utils.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_rename_label_name_labels_name.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_rename_task_name_tasks_name.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/actions/: create_or_update.html  delete.html
task_manager/templates/labels/: labels.html  labels_create_or_update.html  labels_delete.html
task_manager/templates/statuses/: statuses.html  statuses_create_or_update.html
task_manager/templates/tasks/: task.html  tasks.html
task_manager/templates/users/: create.html  user_update.html  users.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
tasks/: urls.py  views.py
templates/: base.html
templates/tasks/: create.html  index.html  login.html  users.html
