[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Anatoliy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
django-admin = "^2.0.2"
django-bootstrap5 = "^24.3"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
